--- a/index.html
+++ b/index.html
@@ -87,6 +87,20 @@ body{
   margin-top:4px;
 }
 
+/* TYPING */
+.typing{display:flex;gap:6px}
+.dot{
+  width:8px;height:8px;border-radius:50%;
+  background:var(--u2);
+  animation:bounce 1.4s infinite;
+}
+.dot:nth-child(2){animation-delay:.2s}
+.dot:nth-child(3){animation-delay:.4s}
+@keyframes bounce{
+  0%,80%,100%{opacity:.4}
+  40%{opacity:1;transform:translateY(-6px)}
+}
+
 /* INPUT */
 .input{
   display:flex;
@@ -109,7 +123,7 @@ body{
   color:#fff;
 }
 
-/* NYLA */
+/* NYLA PNG */
 #nyla{
   position:absolute;
   right:-10px;
@@ -167,7 +181,7 @@ body{
   <img id="nyla" src="assets/nyla/idle.png">
 
   <div class="input">
-    <input id="input" placeholder="Message Nyla…">
+    <input id="input" placeholder="Message Nyla…" autocomplete="off">
     <button id="send">➤</button>
   </div>
 </div>
@@ -186,8 +200,8 @@ body{
 <script>
 /* ================= SUPABASE ================= */
 const supabase = window.supabase.createClient(
-  "https://sjwwkmjfehsondqbmouu.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNqd3drbWpmZWhzb25kcWJtb3V1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU2MzE5MzksImV4cCI6MjA4MTIwNzkzOX0.cgooAxM2BXisi20RH-cKqardpt432dPAs1EI_mVqV0U"
+  "https://zdgsvguebwfecnlboxiq.supabase.co",
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InpkZ3N2Z3VlYndmZWNubGJveGlxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3MDgyNjMsImV4cCI6MjA4MTI4NDI2M30.SqAzHVqbA5YTgkhpxhEFlBhbLBNumVi4_lnSLoBuKR0"
 );
 
 /* API */
@@ -199,11 +213,13 @@ const input = document.getElementById("input");
 const send = document.getElementById("send");
 const settings = document.getElementById("settings");
 
+let typingBubble = null;
+
 /* SETTINGS */
 document.getElementById("openSettings").onclick =
   () => settings.classList.toggle("open");
 
-/* LOAD CLOUD CHATS */
+/* LOAD CHAT HISTORY (ONCE) */
 loadChats();
 
 /* RENDER */
@@ -223,10 +239,28 @@ function render(text,sender,emotion){
   msgs.scrollTop=msgs.scrollHeight;
 }
 
+/* TYPING */
+function showTyping(){
+  typingBubble=document.createElement("div");
+  typingBubble.className="msg nyla";
+  typingBubble.innerHTML=`
+    <div class="typing">
+      <div class="dot"></div>
+      <div class="dot"></div>
+      <div class="dot"></div>
+    </div>`;
+  msgs.appendChild(typingBubble);
+  msgs.scrollTop=msgs.scrollHeight;
+}
+function hideTyping(){
+  typingBubble?.remove();
+  typingBubble=null;
+}
+
 /* SEND */
 send.onclick = sendMsg;
 input.onkeydown = e=>{
-  if(e.key==="Enter"){
+  if(e.key==="Enter" && !e.isComposing){
     e.preventDefault();
     sendMsg();
   }
@@ -241,6 +275,8 @@ async function sendMsg(){
   await supabase.from("nyla_messages")
     .insert({ sender:"user", text });
 
+  showTyping();
+
   try{
     const r=await fetch(API,{
       method:"POST",
@@ -248,10 +284,12 @@ async function sendMsg(){
       body:JSON.stringify({ message:text })
     });
     const d=await r.json();
+    hideTyping();
     render(d.reply,"nyla",d.emotion);
     await supabase.from("nyla_messages")
       .insert({ sender:"nyla", text:d.reply, emotion:d.emotion });
   }catch{
+    hideTyping();
     render("I’m recharging rn 🔋","nyla","sleepy");
   }
 }
@@ -263,12 +301,13 @@ async function loadChats(){
     .select("*")
     .order("created_at",{ascending:true});
 
+  msgs.innerHTML="";
   data?.forEach(m=>render(m.text,m.sender,m.emotion));
 }
 
 /* CLEAR */
 async function clearChats(){
-  await supabase.from("nyla_messages").delete().neq("id","");
+  await supabase.from("nyla_messages").delete().neq("id",0);
   msgs.innerHTML="";
   settings.classList.remove("open");
 }
