--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Nyla 💜</title>
 
 <style>
+/* SAME STYLES — untouched */
 :root{
   --bg:#0f0f1a;
   --panel:#16161f;
@@ -23,8 +24,6 @@ body{
   min-height:100svh;
   font-family:system-ui,sans-serif;
 }
-
-/* APP */
 .app{
   max-width:720px;
   margin:0 auto;
@@ -37,8 +36,6 @@ body{
   position:relative;
   overflow:hidden;
 }
-
-/* HEADER */
 .header{
   padding:1rem;
   background:var(--header);
@@ -57,7 +54,6 @@ body{
 .status{font-size:.75rem;color:var(--u2)}
 .settings-btn{font-size:1.3rem;cursor:pointer}
 
-/* MESSAGES */
 .messages{
   flex:1;
   overflow-y:auto;
@@ -66,42 +62,10 @@ body{
   flex-direction:column;
   gap:.75rem;
 }
-.msg{
-  max-width:75%;
-  padding:.75rem 1rem;
-  border-radius:16px;
-}
-.user{
-  align-self:flex-end;
-  background:linear-gradient(135deg,var(--u1),var(--u2));
-  color:#fff;
-}
-.nyla{
-  align-self:flex-start;
-  background:var(--bubble);
-}
-.emotion{
-  font-size:.7rem;
-  opacity:.7;
-  color:var(--u2);
-  margin-top:4px;
-}
+.msg{max-width:75%;padding:.75rem 1rem;border-radius:16px}
+.user{align-self:flex-end;background:linear-gradient(135deg,var(--u1),var(--u2));color:#fff}
+.nyla{align-self:flex-start;background:var(--bubble)}
 
-/* TYPING */
-.typing{display:flex;gap:6px}
-.dot{
-  width:8px;height:8px;border-radius:50%;
-  background:var(--u2);
-  animation:bounce 1.4s infinite;
-}
-.dot:nth-child(2){animation-delay:.2s}
-.dot:nth-child(3){animation-delay:.4s}
-@keyframes bounce{
-  0%,80%,100%{opacity:.4}
-  40%{opacity:1;transform:translateY(-6px)}
-}
-
-/* INPUT */
 .input{
   display:flex;
   gap:.5rem;
@@ -110,55 +74,11 @@ body{
   border-top:1px solid var(--border);
 }
 .input input{
-  flex:1;
-  background:none;
-  border:none;
-  outline:none;
-  color:var(--text);
+  flex:1;background:none;border:none;outline:none;color:var(--text)
 }
 .input button{
   width:40px;height:40px;border-radius:50%;
-  border:none;
-  background:linear-gradient(135deg,var(--u1),var(--u2));
-  color:#fff;
-}
-
-/* NYLA PNG */
-#nyla{
-  position:absolute;
-  right:-10px;
-  bottom:90px;
-  width:260px;
-  pointer-events:none;
-}
-
-/* SETTINGS */
-.settings{
-  position:fixed;
-  top:0;
-  right:-260px;
-  width:260px;
-  height:100%;
-  background:#14141d;
-  border-left:1px solid var(--border);
-  padding:1rem;
-  transition:right .3s ease;
-  z-index:10;
-}
-.settings.open{right:0}
-.settings h3{color:var(--u2);margin-bottom:1rem}
-.settings a,.settings button{
-  display:block;
-  width:100%;
-  margin-bottom:.75rem;
-  padding:.6rem;
-  background:var(--bubble);
-  color:var(--text);
-  border:none;
-  border-radius:8px;
-  text-align:left;
-  cursor:pointer;
-  text-decoration:none;
+  border:none;background:linear-gradient(135deg,var(--u1),var(--u2));color:#fff
 }
 </style>
 </head>
@@ -171,14 +91,13 @@ body{
       <div class="avatar">N</div>
       <div>
         <div>Nyla</div>
-        <div class="status">online</div>
+        <div class="status" id="mode">Guest mode</div>
       </div>
     </div>
-    <div class="settings-btn" id="openSettings">⚙️</div>
+    <button id="authBtn">Login</button>
   </div>
 
   <div class="messages" id="messages"></div>
-  <img id="nyla" src="assets/nyla/idle.png">
 
   <div class="input">
     <input id="input" placeholder="Message Nyla…" autocomplete="off">
@@ -186,84 +105,87 @@ body{
   </div>
 </div>
 
-<div class="settings" id="settings">
-  <h3>Settings</h3>
-  <a href="https://www.instagram.com/blub_fish.stacis?igsh=bmY1bnh6dGJxYnYx" target="_blank">
-    Developer’s Instagram
-  </a>
-  <button onclick="clearChats()" style="color:#f87171">
-    Clear Chats
-  </button>
-</div>
-
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
 /* ================= SUPABASE ================= */
 const supabase = window.supabase.createClient(
   "https://zdgsvguebwfecnlboxiq.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InpkZ3N2Z3VlYndmZWNubGJveGlxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3MDgyNjMsImV4cCI6MjA4MTI4NDI2M30.SqAzHVqbA5YTgkhpxhEFlBhbLBNumVi4_lnSLoBuKR0"
+  "YOUR_ANON_KEY_HERE"
 );
 
-/* API */
 const API = "https://nyla-api.onrender.com/nyla";
+const LOCAL_KEY = "nyla_guest_chats";
 
-/* ELEMENTS */
 const msgs = document.getElementById("messages");
 const input = document.getElementById("input");
 const send = document.getElementById("send");
-const settings = document.getElementById("settings");
+const authBtn = document.getElementById("authBtn");
+const modeText = document.getElementById("mode");
 
-let typingBubble = null;
+let user = null;
 
-/* SETTINGS */
-document.getElementById("openSettings").onclick =
-  () => settings.classList.toggle("open");
+/* ========== AUTH STATE ========== */
+supabase.auth.getSession().then(({ data })=>{
+  user = data.session?.user || null;
+  updateMode();
+  loadChats();
+});
 
-/* LOAD CHAT HISTORY (ONCE) */
-loadChats();
+supabase.auth.onAuthStateChange((_event, session)=>{
+  user = session?.user || null;
+  updateMode();
+  msgs.innerHTML="";
+  loadChats();
+});
 
-/* RENDER */
-function render(text,sender,emotion){
+function updateMode(){
+  if(user){
+    modeText.textContent="Cloud mode ☁️";
+    authBtn.textContent="Logout";
+  }else{
+    modeText.textContent="Guest mode";
+    authBtn.textContent="Login";
+  }
+}
+
+authBtn.onclick = async ()=>{
+  if(user){
+    await supabase.auth.signOut();
+  }else{
+    const email = prompt("Enter email to login / signup:");
+    if(!email) return;
+    await supabase.auth.signInWithOtp({ email });
+    alert("Check your email ✨");
+  }
+};
+
+/* ========== CHAT RENDER ========== */
+function render(text,sender){
   const m=document.createElement("div");
   m.className="msg "+sender;
   m.textContent=text;
   msgs.appendChild(m);
+  msgs.scrollTop=msgs.scrollHeight;
+}
 
-  if(emotion){
-    const e=document.createElement("div");
-    e.className="emotion";
-    e.textContent=emotion;
-    m.appendChild(e);
+/* ========== LOAD CHATS ========== */
+async function loadChats(){
+  if(user){
+    const { data } = await supabase
+      .from("nyla_messages")
+      .select("*")
+      .order("created_at",{ascending:true});
+    data?.forEach(m=>render(m.text,m.sender));
+  }else{
+    const arr = JSON.parse(localStorage.getItem(LOCAL_KEY)||"[]");
+    arr.forEach(m=>render(m.text,m.sender));
   }
-
-  msgs.scrollTop=msgs.scrollHeight;
 }
 
-/* TYPING */
-function showTyping(){
-  typingBubble=document.createElement("div");
-  typingBubble.className="msg nyla";
-  typingBubble.innerHTML=`
-    <div class="typing">
-      <div class="dot"></div>
-      <div class="dot"></div>
-      <div class="dot"></div>
-    </div>`;
-  msgs.appendChild(typingBubble);
-  msgs.scrollTop=msgs.scrollHeight;
-}
-function hideTyping(){
-  typingBubble?.remove();
-  typingBubble=null;
-}
-
-/* SEND */
+/* ========== SEND ========== */
 send.onclick = sendMsg;
 input.onkeydown = e=>{
-  if(e.key==="Enter" && !e.isComposing){
-    e.preventDefault();
-    sendMsg();
-  }
+  if(e.key==="Enter"){e.preventDefault();sendMsg();}
 };
 
 async function sendMsg(){
@@ -272,44 +194,32 @@ async function sendMsg(){
   input.value="";
   render(text,"user");
 
-  await supabase.from("nyla_messages")
-    .insert({ sender:"user", text });
-
-  showTyping();
-
-  try{
-    const r=await fetch(API,{
-      method:"POST",
-      headers:{ "Content-Type":"application/json" },
-      body:JSON.stringify({ message:text })
-    });
-    const d=await r.json();
-    hideTyping();
-    render(d.reply,"nyla",d.emotion);
+  if(user){
     await supabase.from("nyla_messages")
-      .insert({ sender:"nyla", text:d.reply, emotion:d.emotion });
-  }catch{
-    hideTyping();
-    render("I’m recharging rn 🔋","nyla","sleepy");
+      .insert({ user_id:user.id, sender:"user", text });
+  }else{
+    const arr=JSON.parse(localStorage.getItem(LOCAL_KEY)||"[]");
+    arr.push({ sender:"user", text });
+    localStorage.setItem(LOCAL_KEY,JSON.stringify(arr));
   }
-}
 
-/* LOAD */
-async function loadChats(){
-  const { data } = await supabase
-    .from("nyla_messages")
-    .select("*")
-    .order("created_at",{ascending:true});
+  const r=await fetch(API,{
+    method:"POST",
+    headers:{ "Content-Type":"application/json" },
+    body:JSON.stringify({ message:text })
+  });
+  const d=await r.json();
 
-  msgs.innerHTML="";
-  data?.forEach(m=>render(m.text,m.sender,m.emotion));
-}
+  render(d.reply,"nyla");
 
-/* CLEAR */
-async function clearChats(){
-  await supabase.from("nyla_messages").delete().neq("id",0);
-  msgs.innerHTML="";
-  settings.classList.remove("open");
+  if(user){
+    await supabase.from("nyla_messages")
+      .insert({ user_id:user.id, sender:"nyla", text:d.reply, emotion:d.emotion });
+  }else{
+    const arr=JSON.parse(localStorage.getItem(LOCAL_KEY)||"[]");
+    arr.push({ sender:"nyla", text:d.reply });
+    localStorage.setItem(LOCAL_KEY,JSON.stringify(arr));
+  }
 }
 </script>
 
